test/semantics/programs/invalid/incomplete-match-bool.guav
# Should fail since match doesn't cover all possibilities

match y with
    | true  -> "This language deserves an A"
